--- a/css/estilo.css
+++ b/css/estilo.css
@@ -167,6 +167,15 @@ body {
     font-size: 30px;
     color: #361b6b;
     text-align: center; }
+  body .posicionRedes {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 1; }
+  body .linkRed2 {
+    font-family: "Macondo", cursive;
+    color: #361b6b;
+    text-decoration: none; }
 
 /*header*/
 header {
